Feat: added bookshop styles into the build

--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -1,3 +1,3 @@
 <nav style="height: 100px; box-shadow: 0 1px 5px #888888; background-color: rgba(27, 27, 29, 0.60); display: flex; justify-content: center; align-items: center">
-    <h2>FOOTER GOES HERE</h2>
+    <h2>NAV GOES HERE</h2>
 </nav>
