--- a/src/_includes/layouts/page.html
+++ b/src/_includes/layouts/page.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% include 'partials/head/meta.html' %}
+    <link rel="stylesheet" href="/assets/styles/bookshop.css">
     <script src="/assets/js/main.js" defer></script>
     <title>{{ title }}</title>
 </head>
 <body>
+    {% include 'partials/nav/navigation.html' %}
+
     <main>
         {% bookshop_include "page" content_blocks: content_blocks %}
         {{ content }}
     </main>
+    {% include 'partials/footer/footer.html' %}
+
 </body>
 </html>
