Add generate styles script and build boilerplate component

--- a/component-library/shared/styles/global.scss
+++ b/component-library/shared/styles/global.scss
@@ -4,3 +4,14 @@
 html, body {
     
 }
+
+// Default styles applied to all components
+// Component-specific styles are defined within their component directory
+.component {
+	padding: 96px 124px;
+	background-color: var(--light-background-variant);
+
+	&--dark {
+		background-color: var(--dark-background-variant);
+	}
+}
