--- a/component-library/components/generic/sample/sample.eleventy.liquid
+++ b/component-library/components/generic/sample/sample.eleventy.liquid
@@ -1,3 +1,8 @@
-<div class="c-sample">
+{% assign c = "c-COMPONENTNAME" %}
+<div class="{{c}} 
+            component 
+            {% if include.background_variant == "Dark" %} 
+                component--dark
+            {% endif %}">
     <p>{{ text }}</p>
 </div>
