--- a/src/_includes/layouts/page.html
+++ b/src/_includes/layouts/page.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% include 'partials/head/meta.html' %}
-    <link rel="stylesheet" href="/assets/styles/bookshop.css">
+    {% include 'partials/head/styles.html' %}
+
     <script src="/assets/js/main.js" defer></script>
     <title>{{ title }}</title>
 </head>
