--- a/src/_includes/partials/head/stylesheets.html
+++ b/src/_includes/partials/head/stylesheets.html
@@ -1,2 +1,3 @@
+<link rel="stylesheet" href="/css/bookshop.css">
+<link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/assets/styles/custom-styles.css">
-<link rel="stylesheet" href="/assets/styles/bookshop.css">
