--- a/src/_includes/layouts/page.html
+++ b/src/_includes/layouts/page.html
@@ -9,10 +9,18 @@
 
     <script src="/assets/js/main.js" defer></script>
     <title>{{ title }}</title>
+    {% include 'partials/head/google-fonts.html' %}
 </head>
 <body>
     {% include 'partials/nav/navigation.html' %}
-
+    <h2 style="color:#ff0000">fonts</h2>
+    {% for font in googleFonts.fonts %}
+        <h1>{{ font.label }}</h1>
+    {% endfor %}
+    
+    {% for item in nav.navigation_items %}
+        <h1>{{ item.label }}</h1>
+    {% endfor %}
     <main>
         {% bookshop_include "page" content_blocks: content_blocks %}
         {{ content }}
