--- a/src/_includes/partials/nav/navigation-desktop.html
+++ b/src/_includes/partials/nav/navigation-desktop.html
@@ -1,3 +1,3 @@
-<ul class="{{c}}--desktop">
-  <li>This is a desktop nav</li>
-</ul>
+<div class="{{ c }}__desktop">
+  {% include 'partials/nav/navigation-list.html' %}
+</div>
