--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -1,6 +1,10 @@
 {% assign c = "c-navigation" %}
 <nav class="{{c}}">
-    <img class="{{c__logo}}" src="{{nav.logo_image}}" alt="Site logotype"/>
+    {% if nav.navigation_heading != blank %}
+        <a class="{{c}}__logo-text {{c}}__logo-link">{{ nav.navigation_heading }}</a>
+    {% else %}
+        <a href="/" class="{{c}}__logo-link"><img class="{{c}}__logo-image" src="{{nav.logo_image}}" alt="Site logotype"/></a>
+    {% endif %}
     {% include 'partials/nav/navigation-mobile.html' %}
     {% include 'partials/nav/navigation-desktop.html' %}
 </nav>
