Fix: Finalise fonts integration

--- a/component-library/shared/styles/global.scss
+++ b/component-library/shared/styles/global.scss
@@ -2,7 +2,9 @@
 // as well as in the component browser and screenshots.
 
 html, body {
-    
+	h1, h2, h3, h4 {
+		font-family: var(--heading-font);
+	}
 }
 
 // Default styles applied to all components
