--- a/src/assets/styles/custom-styles.css
+++ b/src/assets/styles/custom-styles.css
@@ -1,4 +1,6 @@
 :root {
   --light-background-variant: #3B3B3D;
   --dark-background-variant: #1B1B1D;
+  --heading-font: Questrial;
+  --content-font: Questrial;
 }
