--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -1,10 +1,13 @@
 {% assign c = "c-navigation" %}
 <nav class="{{c}}" aria-label="Main menu">
-    {% if nav.navigation_heading != blank %}
-        <a class="{{c}}__logo-text {{c}}__logo-link">{{ nav.navigation_heading }}</a>
-    {% else %}
-        <a href="/" class="{{c}}__logo-link"><img class="{{c}}__logo-image" src="{{nav.logo_image}}" alt="Site logotype"/></a>
-    {% endif %}
+    <a class="{{c}}__logo-link" href="/" aria-label="Home" {% if page.url == "/" %}aria-current="page"{% endif %}>
+        {% if nav.navigation_heading != blank %}
+            <span class="{{c}}__logo-text">{{ nav.navigation_heading }}</span>
+        {% else %}
+            <img class="{{c}}__logo-image" src="{{nav.logo_image}}" alt="Site logotype" />
+        {% endif %}
+    </a>
+    
     {% include 'partials/nav/navigation-mobile.html' %}
     {% include 'partials/nav/navigation-desktop.html' %}
 </nav>
