--- a/component-library/components/generic/component-heading/component-heading.scss
+++ b/component-library/components/generic/component-heading/component-heading.scss
@@ -4,6 +4,11 @@
     display: grid;
     grid-template-columns: var(--twelve-column-grid);
     gap: 0.5rem;
+    width: 27.9375rem;
+
+    @media (width > 1279px){
+        width: var(--tablet, 48rem);
+    }
 
     &--eyebrow_heading {
 
