--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -1,7 +1,7 @@
 {% assign c = "c-navigation" %}
 <nav class="{{c}}" aria-label="Main menu">
     <a class="{{c}}__logo-link" href="/" aria-label="Home" {% if page.url == "/" %}aria-current="page"{% endif %}>
-        {% if nav.navigation_heading != blank %}
+        {% if nav.navigation_heading %}
             <span class="{{c}}__logo-text">{{ nav.navigation_heading }}</span>
         {% else %}
             <img class="{{c}}__logo-image" src="{{nav.logo_image}}" alt="Site logotype" />
