--- a/component-library/components/generic/video/video.scss
+++ b/component-library/components/generic/video/video.scss
@@ -1,30 +1,24 @@
 .c-video {
- 
 
-    &__video-aspect-wrapper {
-        position: relative;
-        width: 100%;
-        height: 100%;
-    }
+	&__video-aspect-wrapper {
+		position: relative;
+		display: flex;
+		flex: 1 350px;
+		margin: 8px;
+	}
 
-    &__video {
-        position: relative;
-        width: 100%;
-        height: 100%;
-    }
-
-    &__youtube, 
-    &__vimeo {
-        position: absolute;
-        top: 0;
-        left: 0;
-        min-height: 256px;
-        max-height: 480px;
-        width: 100%;
-        height: 100%;
-        border: 0;
-
-    }
-
+	&__video {
+		height: 0;
+		padding-bottom: 56.25%;
+		width: 100%;
+		
+		iframe {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin: 0 auto;
+		}
+	}
 }
-
