--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,1 +1,11 @@
-@import 'variables.scss';
+@import "variables.scss";
+
+body {
+  display: grid;
+  grid-template-columns: var(--twelve-column-grid);
+}
+nav,
+footer,
+main {
+  grid-column: 1 / -1;
+}
