--- a/component-library/components/generic/icon/icon.eleventy.liquid
+++ b/component-library/components/generic/icon/icon.eleventy.liquid
@@ -1,12 +1,9 @@
 {% assign c = "c-icon" %}
 
-{% if env_bookshop_live %}
-    {% comment %}
-        TODO: see how Mike implemented visual editing with icons in bookshop
-    {% endcomment %}
-    <p>This component won't display correctly while live editing </p>
-{% else %}
-    <div class="{{ c }} {%if big_icon %}{{c}}__big{% else %}{{c}}__small{% endif %} {% if rounded_border %}{{c}}__round{% endif %}">
+<div class="{{ c }} {%if big_icon %}{{c}}__big{% else %}{{c}}__small{% endif %} {% if rounded_border %}{{c}}__round{% endif %}">
+    {% if env_bookshop_live %}
+        <img src="/assets/images/icons/{{svg_icon}}.svg" alt="{{svg_icon}}">
+    {% else %}
         {{ '/src/assets/images/icons/' | append: svg_icon  | append: '.svg'  | svgContents }}
-    </div>
-{% endif %}
+    {% endif %}
+</div>
