--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,2 +1,12 @@
 @import 'variables.scss';
 @import 'nav.scss';
+
+
+body{
+    display: grid;
+    grid-template-columns: var(--twelve-column-grid);
+    
+    nav, main, footer{
+        grid-column: 1/ -1;
+    }
+}
