--- a/src/_includes/partials/nav/navigation-list.html
+++ b/src/_includes/partials/nav/navigation-list.html
@@ -1,13 +1,13 @@
-<ul class="{{c }}__list">
+<ul class="{{ c }}__list">
   {% for navitem in nav.navigation_items %}
     {% assign nav_item_with_slash = navitem.link_url | append: "/" %}
     {% if page.url == navitem.link_url or page.url == nav_item_with_slash %}
-      <li class="{{ c }}__item {{ c }}__item--active" aria-current="page">
-        <a class="{{ c }}__link" href="{{ navitem.link_url }}">{{ navitem.label }}</a>
+      <li class="{{ c }}__list__item {{ c }}__item--active" aria-current="page">
+        <a class="{{ c }}__list__item__link" href="{{ navitem.link_url }}">{{ navitem.label }}</a>
       </li>
     {% else %}
-      <li class="{{ c }}__item">
-        <a class="{{ c }}__link" href="{{ navitem.link_url }}">{{ navitem.label }}</a>
+      <li class="{{ c }}__list__item">
+        <a class="{{ c }}__list__item__link" href="{{ navitem.link_url }}">{{ navitem.label }}</a>
       </li>
     {% endif %}
   {% endfor %}
