Refactor: names of classes

--- a/src/_includes/partials/nav/navigation-mobile.html
+++ b/src/_includes/partials/nav/navigation-mobile.html
@@ -1,4 +1,8 @@
 <div class="{{ c }}__mobile">
-  {% include 'partials/nav/navigation-list.html' %}
-  <div class="{{ c }}__burger"></div>
+  <div class="{{ c }}__burger-menu"></div>
+
+  <div class="{{ c }}__mobile__nav-list">
+    {% include 'partials/nav/navigation-list.html' %}
+  </div>
+
 </div>
