--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -8,9 +8,9 @@
 
     <a class="{{c}}__logo-link" href="/" aria-label="Home" {% if page.url == "/" %}aria-current="page"{% endif %}>
         {% if nav.navigation_heading %}
-            <span class="{{c}}__logo-text">{{ nav.navigation_heading }}</span>
+            <span class="{{c}}__logo-link__text">{{ nav.navigation_heading }}</span>
         {% else %}
-            <img class="{{c}}__logo-image" src="{{nav.logo_image}}" alt="Site logotype" />
+            <img class="{{c}}__logo-link__image" src="{{nav.logo_image}}" alt="Site logotype" />
         {% endif %}
     </a>
     
