--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -54,4 +54,7 @@
   --success-green-300: #0d8843;
   --success-green-400: #017737;
   --success-green-500: #005824;
+
+  --feature-image-opacity: #1b1b1d99;
+
 }
