Add font related variables.

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -20,6 +20,13 @@
   --paragraph-small: 0.8rem;
   --label: 0.64rem;
   --button: 1rem;
+  --line-height: normal;
+  --letter-spacing: 0;
+  --letter-spacing-eyebrow: 0.25rem;
+  --font-family: "Lato";
+  --font-weight-headings: 700;
+  --font-weight-body: 400;
+  --font-weight-button: 700;
 
   /* Colors */
   // Gray
