--- a/component-library/components/generic/labelled-icon/labelled-icon.scss
+++ b/component-library/components/generic/labelled-icon/labelled-icon.scss
@@ -13,4 +13,9 @@
         flex-direction: column;
         width: 5rem;
     }
+
+    &__text {
+        text-align: center;
+        margin: 0px;
+    }
 }
