Change px to rem

--- a/component-library/components/generic/icon/icon.scss
+++ b/component-library/components/generic/icon/icon.scss
@@ -5,18 +5,18 @@
     }
     
     &__big {
-        width: 69.126px;
-        height: 69.126px;
-        padding: 16px;
+        width: 2.32044rem;
+        height: 2.32044rem;
+        padding: 1rem;
         border-style: solid;
         border-width: 1px;
         border-color: transparent;
     }
 
     &__small {
-        width: 32px;
-        height: 32px;
-        padding: 7.407px;
+        width: 1.07419rem;
+        height: 1.07419rem;
+        padding: 0.46294rem;
         border-style: solid;
         border-width: 0.463px;
         border-color: transparent;
