--- a/src/_includes/partials/nav/navigation-mobile.html
+++ b/src/_includes/partials/nav/navigation-mobile.html
@@ -1,23 +1,20 @@
-<div class="{{ c }}__mobile">
-  <button class="{{ c }}__mobile__burger-menu">
-    <div id="burger-menu" class="{{ c }}__mobile__burger-menu__burger"></div>
+  <button class="{{ c }}__mobile__burger-menu" onclick="swapOpenState()">
+    <div class="{{ c }}__mobile__burger-menu__burger"></div>
   </button>
 
-  <div class="{{ c }}__mobile__nav-list">
     {% include 'partials/nav/navigation-list.html' %}
-  </div>
 
-</div>
 
 <script>
-  let burgerMenu = document.getElementById('burger-menu');
-  let openClass = "c-navigation__mobile__burger-menu__burger--open";
-  burgerMenu.addEventListener('click', function () {
-    if(burgerMenu.classList.contains(openClass)){
-      burgerMenu.classList.remove(openClass);
+  function swapOpenState() {
+    const mobileMenu = document.getElementById('mobile-menu');
+    const openClass = "c-navigation__mobile--open";
+    console.log(mobileMenu);
+    if(mobileMenu.classList.contains(openClass)){
+      mobileMenu.classList.remove(openClass);
     }
     else{
-      burgerMenu.classList.add(openClass);
+      mobileMenu.classList.add(openClass);
     }
-  })
+  } 
 </script>
