--- a/component-library/components/generic/component-heading/component-heading.scss
+++ b/component-library/components/generic/component-heading/component-heading.scss
@@ -5,7 +5,7 @@
   grid-template-columns: var(--twelve-column-grid);
   gap: 0.5rem;
 
-  &-center {
+  &--center {
     height: 7.875rem;
     align-self: stretch;
   }
@@ -15,7 +15,7 @@
     height: 4.9375rem;
   }
 
-  &--eyebrow_heading {
+  &__eyebrow_heading {
     grid-column: 2 / -2;
     grid-row: 1;
     font-family: var(--font-family);
@@ -35,7 +35,7 @@
       grid-column: 3 / -3;
     }
 
-    &-center {
+    &--center {
       text-align: center;
 
       @media (min-width: 1279px) {
@@ -44,7 +44,7 @@
     }
   }
 
-  &--primary_heading {
+  &__primary_heading {
     grid-column: 2 / -2;
     grid-row: 2;
     font-family: var(--font-family);
@@ -62,7 +62,7 @@
       grid-column: 3 / -3;
     }
 
-    &-center {
+    &--center {
       text-align: center;
 
       @media (min-width: 1279px) {
