--- a/component-library/components/generic/video/video.scss
+++ b/component-library/components/generic/video/video.scss
@@ -20,5 +20,17 @@
 			right: 0;
 			margin: 0 auto;
 		}
+
+		img {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin: 0 auto;
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+		}
 	}
 }
