Use inline styles tag instead of generating variables

--- a/src/_includes/partials/head/stylesheets.html
+++ b/src/_includes/partials/head/stylesheets.html
@@ -1,3 +1,12 @@
+<!-- User Defined Styles -->
+<style>
+  :root {
+    --light-background-variant: {{ site.styles.light_background_variant | default: "#3B3B3D" }};
+    --dark-background-variant: {{ site.styles.dark_background_variant | default: "#1B1B1D" }};
+    --heading-font: {{ site.styles.heading_font | default: "Lato" }};
+    --content-font: {{ site.styles.content_font | default: "Lato" }};
+  }
+</style>
+
 <link rel="stylesheet" href="/css/bookshop.css">
 <link rel="stylesheet" href="/css/main.css">
-<link rel="stylesheet" href="/assets/styles/custom-styles.css">
