--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -42,4 +42,7 @@
     --success-green-300: #0d8843;
     --success-green-400: #017737;
     --success-green-500: #005824;
+
+    // User controlled variables such as fonts, colors etc. are defined
+    // within src/_includes/partials/head/stylesheets.
 }
