Fix: Move generic styles to assets stylesheet

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,1 +1,22 @@
 @import 'variables.scss';
+
+html,
+body {
+  h1,
+  h2,
+  h3,
+  h4 {
+    font-family: var(--heading-font);
+  }
+}
+
+// Default styles applied to all components
+// Component-specific styles are defined within their component directory
+.component {
+  padding: 96px 124px;
+  background-color: var(--light-background-variant);
+
+  &--dark {
+    background-color: var(--dark-background-variant);
+  }
+}
