Add icon_fill_color in

--- a/component-library/components/generic/icon/icon.eleventy.liquid
+++ b/component-library/components/generic/icon/icon.eleventy.liquid
@@ -1,9 +1,9 @@
 {% assign c = "c-icon" %}
 
-<div class="{{ c }} {%if big_icon %}{{c}}__big{% else %}{{c}}__small{% endif %} {% if rounded_border %}{{c}}__round{% endif %}">
+<div class="{{ c }} {%if big_icon %}{{c}}__big{% else %}{{c}}__small{% endif %} {% if rounded_border %}{{c}}__round{% endif %}" style="--icon-color: {{icon_fill_color}}">
     {% if env_bookshop_live %}
-        <img src="/assets/images/icons/{{svg_icon}}.svg" alt="{{svg_icon}}">
+        <img class="c-icon__svg" src="/assets/images/icons/{{svg_icon}}.svg" alt="{{svg_icon}}">
     {% else %}
-        {{ '/src/assets/images/icons/' | append: svg_icon  | append: '.svg'  | svgContents }}
+        {{ '/src/assets/images/icons/' | append: svg_icon  | append: '.svg'  | svgContents: "c-icon__svg" }}
     {% endif %}
 </div>
