--- a/component-library/components/generic/icon/icon.scss
+++ b/component-library/components/generic/icon/icon.scss
@@ -1,4 +1,6 @@
 .c-icon {
+    --icon-color: white;
+
     &__round {
         border-radius: 50%;
         border-color: var(--neutral-000, #FFF);
@@ -20,5 +22,9 @@
         border-style: solid;
         border-width: 0.463px;
         border-color: transparent;
+    }
+
+    &__svg {
+        fill: var(--icon-color);
     }
 }
