--- a/src/assets/styles/nav.scss
+++ b/src/assets/styles/nav.scss
@@ -30,10 +30,15 @@
         justify-self: center;
         align-self: center;
         display: none;
+        flex-direction: column;
+        align-items: center;
+        gap: 3rem;
 
         &__item {
             &__link {
                 text-decoration: none;
+                color: var(--brand-grey-200, #E9E9EC);
+                white-space: nowrap;
             }
         }
 
@@ -121,7 +126,7 @@
         }
 
         #{$c}__navlist {
-            display: block;
+            display: flex;
         }
     }
 
@@ -147,6 +152,7 @@
             display: flex;
             gap: 0.625rem;
             justify-self: end;
+            flex-direction: row;
         }
 
         &__burger-menu {
